added a slackrandom endpoint
